fix long text can overflow

--- a/src/components/InfoBox/InfoBox.module.css
+++ b/src/components/InfoBox/InfoBox.module.css
@@ -3,8 +3,8 @@
   align-items: flex-start;
   border-radius: 12px;
   padding: 1rem;
-  height: 140px;
   width: 100%;
+  height: 160px;
   @media (max-width: 1000px) {
     align-items: center;
     justify-content: center;
